--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-
-<!DOCTYPE html><html>
-<head>
-<title>First Github</title>
-<style>
-*{background:black;}
-</style>
-</head>
-<h1>Thanks Github!</h1>
-
-
-</html>
-
-
+"Hello World" 
