--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@ h1{color:white;}
 *{background:black;}
 </style>
 </head>
+<img src='gameboy.gif'>
 <h1>Thanks Github!</h1>
+<p>
+<h2>Menu</h2>
+</p>
 
 
 </html>
